force-app/main/default/objects/Zendesk_Agent__c/Zendesk_Agent__c.object-meta.xml
<CustomObject>
    <label>Zendesk Agent</label>
    <nameField>
        <label>Zendesk Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>