force-app/main/default/objects/Zendesk_Agent__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>agent</fullName>
                <default>true</default>
                <label>agent</label>
            </value>
            <value>
                <fullName>end-user</fullName>
            </value>
            <value>
                <fullName>admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>