force-app/main/default/objects/Zendesk_Agent__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>DateTime</type>
</CustomField>