force-app/main/default/objects/Zendesk_Agent__c/fields/Zendesk_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>Zendesk User ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>